--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App</title>
+    <script src="https://kit.fontawesome.com/dec278641f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
   </head>
   <body>
-<<<<<<< HEAD
-    <div id="root">
-    </div>
-=======
+
     <div id="root"></div>
->>>>>>> c66110fc8f6c05105f7f7dba3b3f3fc83bce20d1
   </body>
 </html>
