--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,19 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+      crossorigin="anonymous"
+    />
     <title>React App</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <div id="root">
-    </div>
-=======
+    <<<<<<< HEAD
     <div id="root"></div>
->>>>>>> c66110fc8f6c05105f7f7dba3b3f3fc83bce20d1
+    =======
+    <div id="root"></div>
+    >>>>>>> c66110fc8f6c05105f7f7dba3b3f3fc83bce20d1
   </body>
 </html>
