hth first commit

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,15 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
     <title>React App</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <div id="root">
-    </div>
-=======
     <div id="root"></div>
->>>>>>> c66110fc8f6c05105f7f7dba3b3f3fc83bce20d1
   </body>
 </html>
